tarmac/new_pattern24/kubernetes/applications/mpt/overlays/environments/dev/app-survey-api-service/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/backend-protocol: HTTPS
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:946884638317:certificate/e1a35943-f788-43ce-9bde-4cc783009c8d
    alb.ingress.kubernetes.io/group.name: mpt
    alb.ingress.kubernetes.io/healthcheck-path: /health
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTPS
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS": 7286}]'
    alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-TLS13-1-2-2021-06
    alb.ingress.kubernetes.io/tags: Environment=dev,Team=devops
    alb.ingress.kubernetes.io/target-type: ip
  name: app-survey-api-swagger
spec:
  ingressClassName: alb
  rules:
  - host: api.cliniciannexus.com
    http:
      paths:
      - backend:
          service:
            name: app-survey-api-service
            port:
              name: https
        path: /swagger
        pathType: Prefix
      - backend:
          service:
            name: app-survey-api-service
            port:
              name: https
        path: /api/survey
        pathType: Prefix
